// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ForgotPasswordForm/> should fail requesting 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="makeStyles-root-14"
      >
        <div
          class="MuiBox-root MuiBox-root-15"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3"
          >
            Reset password
          </h3>
        </div>
        <form
          action="#"
          data-testid="common-auth-forgotPassword-form-form"
        >
          <div
            class="makeStyles-root-18"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-19 makeStyles-label-21 MuiInputLabel-animated"
            >
              Enter email
            </label>
            <div
              class="MuiInputBase-root MuiInput-root makeStyles-inputRoot-16 MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
              data-testid="common-auth-forgotPassword-form-email"
              label="Enter email"
            >
              <input
                class="MuiInputBase-input MuiInput-input makeStyles-input-17"
                type="text"
                value="john@doe"
              />
            </div>
            <div
              class="MuiCollapse-container"
              style="min-height: 0px; height: 0px; transition-duration: 300ms;"
            >
              <div
                class="MuiCollapse-wrapper"
              >
                <div
                  class="MuiCollapse-wrapperInner"
                >
                  <p
                    class="MuiFormHelperText-root makeStyles-errorText-20 Mui-error"
                  >
                    Enter valid email
                  </p>
                </div>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root makeStyles-root-22 makeStyles-root-25 MuiButton-contained MuiButton-containedSecondary MuiButton-fullWidth"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="makeStyles-inner-23 makeStyles-inner-26"
                data-testid="common-elementary-button-children"
                style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              >
                Request reset password
              </span>
              <div
                class="makeStyles-loader-24"
                data-testid="common-elementary-button-loader"
                style="opacity: 0; visibility: hidden;"
              >
                <div
                  class="css-0"
                >
                  <div
                    class="css-1ab95gp"
                  />
                  <div
                    class="css-tm4xur"
                  />
                  <div
                    class="css-1epl0i6"
                  />
                  <div
                    class="css-1fj2adh"
                  />
                  <div
                    class="css-1vivfwt"
                  />
                </div>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="makeStyles-root-14"
    >
      <div
        class="MuiBox-root MuiBox-root-15"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3"
        >
          Reset password
        </h3>
      </div>
      <form
        action="#"
        data-testid="common-auth-forgotPassword-form-form"
      >
        <div
          class="makeStyles-root-18"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-19 makeStyles-label-21 MuiInputLabel-animated"
          >
            Enter email
          </label>
          <div
            class="MuiInputBase-root MuiInput-root makeStyles-inputRoot-16 MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
            data-testid="common-auth-forgotPassword-form-email"
            label="Enter email"
          >
            <input
              class="MuiInputBase-input MuiInput-input makeStyles-input-17"
              type="text"
              value="john@doe"
            />
          </div>
          <div
            class="MuiCollapse-container"
            style="min-height: 0px; height: 0px; transition-duration: 300ms;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <p
                  class="MuiFormHelperText-root makeStyles-errorText-20 Mui-error"
                >
                  Enter valid email
                </p>
              </div>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root makeStyles-root-22 makeStyles-root-25 MuiButton-contained MuiButton-containedSecondary MuiButton-fullWidth"
          tabindex="0"
          type="submit"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="makeStyles-inner-23 makeStyles-inner-26"
              data-testid="common-elementary-button-children"
              style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              Request reset password
            </span>
            <div
              class="makeStyles-loader-24"
              data-testid="common-elementary-button-loader"
              style="opacity: 0; visibility: hidden;"
            >
              <div
                class="css-0"
              >
                <div
                  class="css-1ab95gp"
                />
                <div
                  class="css-tm4xur"
                />
                <div
                  class="css-1epl0i6"
                />
                <div
                  class="css-1fj2adh"
                />
                <div
                  class="css-1vivfwt"
                />
              </div>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<ForgotPasswordForm/> should successfully request reset 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="makeStyles-root-1"
      >
        <div
          class="MuiBox-root MuiBox-root-2"
        >
          <h3
            class="MuiTypography-root MuiTypography-h3"
          >
            Reset password
          </h3>
        </div>
        <form
          action="#"
          data-testid="common-auth-forgotPassword-form-form"
        >
          <div
            class="makeStyles-root-5"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-6 makeStyles-label-8 MuiInputLabel-animated"
            >
              Enter email
            </label>
            <div
              class="MuiInputBase-root MuiInput-root makeStyles-inputRoot-3 MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
              data-testid="common-auth-forgotPassword-form-email"
              label="Enter email"
            >
              <input
                class="MuiInputBase-input MuiInput-input makeStyles-input-4"
                type="text"
                value="john@doe.com"
              />
            </div>
            <div
              class="MuiCollapse-container MuiCollapse-hidden"
              style="min-height: 0px;"
            >
              <div
                class="MuiCollapse-wrapper"
              >
                <div
                  class="MuiCollapse-wrapperInner"
                >
                  <p
                    class="MuiFormHelperText-root makeStyles-errorText-7 Mui-error"
                  >
                    <span>
                      ​
                    </span>
                  </p>
                </div>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root makeStyles-root-9 makeStyles-root-12 MuiButton-contained MuiButton-containedSecondary MuiButton-fullWidth"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="makeStyles-inner-10 makeStyles-inner-13"
                data-testid="common-elementary-button-children"
                style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
              >
                Request reset password
              </span>
              <div
                class="makeStyles-loader-11"
                data-testid="common-elementary-button-loader"
                style="opacity: 0; visibility: hidden;"
              >
                <div
                  class="css-0"
                >
                  <div
                    class="css-1ab95gp"
                  />
                  <div
                    class="css-tm4xur"
                  />
                  <div
                    class="css-1epl0i6"
                  />
                  <div
                    class="css-1fj2adh"
                  />
                  <div
                    class="css-1vivfwt"
                  />
                </div>
              </div>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="makeStyles-root-1"
    >
      <div
        class="MuiBox-root MuiBox-root-2"
      >
        <h3
          class="MuiTypography-root MuiTypography-h3"
        >
          Reset password
        </h3>
      </div>
      <form
        action="#"
        data-testid="common-auth-forgotPassword-form-form"
      >
        <div
          class="makeStyles-root-5"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root makeStyles-label-6 makeStyles-label-8 MuiInputLabel-animated"
          >
            Enter email
          </label>
          <div
            class="MuiInputBase-root MuiInput-root makeStyles-inputRoot-3 MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
            data-testid="common-auth-forgotPassword-form-email"
            label="Enter email"
          >
            <input
              class="MuiInputBase-input MuiInput-input makeStyles-input-4"
              type="text"
              value="john@doe.com"
            />
          </div>
          <div
            class="MuiCollapse-container MuiCollapse-hidden"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner"
              >
                <p
                  class="MuiFormHelperText-root makeStyles-errorText-7 Mui-error"
                >
                  <span>
                    ​
                  </span>
                </p>
              </div>
            </div>
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root makeStyles-root-9 makeStyles-root-12 MuiButton-contained MuiButton-containedSecondary MuiButton-fullWidth"
          tabindex="0"
          type="submit"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="makeStyles-inner-10 makeStyles-inner-13"
              data-testid="common-elementary-button-children"
              style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
            >
              Request reset password
            </span>
            <div
              class="makeStyles-loader-11"
              data-testid="common-elementary-button-loader"
              style="opacity: 0; visibility: hidden;"
            >
              <div
                class="css-0"
              >
                <div
                  class="css-1ab95gp"
                />
                <div
                  class="css-tm4xur"
                />
                <div
                  class="css-1epl0i6"
                />
                <div
                  class="css-1fj2adh"
                />
                <div
                  class="css-1vivfwt"
                />
              </div>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
